Fix book appointment form input fields layout overflow by setting width 100%

--- a/src/pages/BookAppointment/BookAppointment.css
+++ b/src/pages/BookAppointment/BookAppointment.css
@@ -103,6 +103,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  width: 100%;
 }
 
 .input-icon {
